Replace old jar with runnable fat jar